WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44739
[chromium] LayerRendererChromium.cpp fails to compile when DEBUG_GL_CALLS=1
https://bugs.webkit.org/show_bug.cgi?id=44739
Summary
[chromium] LayerRendererChromium.cpp fails to compile when DEBUG_GL_CALLS=1
Vangelis Kokkevis
Reported
2010-08-26 18:49:11 PDT
It's an issue caused by the expansion of the GLC macro.
Attachments
Proposed patch
(1.51 KB, patch)
2010-08-26 18:52 PDT
,
Vangelis Kokkevis
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vangelis Kokkevis
Comment 1
2010-08-26 18:52:36 PDT
Created
attachment 65658
[details]
Proposed patch
Vangelis Kokkevis
Comment 2
2010-08-27 17:57:34 PDT
Committed
r66287
: <
http://trac.webkit.org/changeset/66287
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug