2010-08-26  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Darin Fisher.

        [chromium] Working around compile issue in LayerRendererChromium.cpp
        when DEBUG_GL_CALLS=1
        https://bugs.webkit.org/show_bug.cgi?id=44739

        No new functionality, no new tests.

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawLayerIntoStencilBuffer):


Canonical link: https://commits.webkit.org/57054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66287 268f45cc-cd09-0410-ab3c-d52691b4dbfc